[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = "My solutions for leetcode problems"
authors = ["Renat Yuldashev <renatyv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.2"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
